objects/Attendee__c.object
<CustomObject>
    <description>SFDC1-9063: Attendees is created for account overview report</description>
    <fields>
        <fullName>AccountOverview__c</fullName>
        <description>SFDC1-9063 Account overview field created under attendee object</description>
        <label>Account Overview</label>
        <referenceTo>AccountOverview__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AttendeeName__c</fullName>
        <description>SFDC1-9063, Created for account overview report. First and Last Name of attendee</description>
        <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First and Last Name of attendee</inlineHelpText>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-9063 Account overview field created under attendee object</description>
        <inlineHelpText>List of active contacts</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IHSMarkitEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. Field to show IHSMarkit Employee</description>
        <inlineHelpText>Field to show IHSMarkit Employee</inlineHelpText>
        <label>IHSMarkit Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>SFDC1-9063, Created for account overview report. Field to show the title of contact</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to show the title of contact</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>Attendees Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>